# SecondOfComputerEngineering

./: README.md
AEDA/p01_game_life/: Cell.cc  Cell.h  Grid.cc  Grid.h  Makefile  game_life  main_functions.cc  main_functions.h  main_game_life.cc
AEDA/p02_cycle_life/: Cell.cc  Cell.h  Grid.cc  Grid.h  Makefile  State.cc  State.h  StateAdult.cc  StateAdult.h  StateDead.cc  StateDead.h  StateEgg.cc  StateEgg.h  StateLarva.cc  StateLarva.h  StatePupa.cc  StatePupa.h  cycle_life  main_cycle_life.cc  main_functions.cc  main_functions.h
AEDA/p03_life_on_the_border/: Cell.cc  Cell.h  Grid.cc  Grid.h  GridWithOpenBorder.cc  GridWithOpenBorder.h  GridWithPeriodicBorder.cc  GridWithPeriodicBorder.h  GridWithReflectiveBorder.cc  GridWithReflectiveBorder.h  Makefile  State.cc  State.h  StateAlive.cc  StateAlive.h  StateDead.cc  StateDead.h  life_border  main_functions.cc  main_functions.h  main_life_border.cc
AEDA/p04_hash_table/: Makefile
AEDA/p05_sorting_methods/: Makefile
AEDA/p06_balanced_binary_tree/: Makefile
AEDA/p07_binary_search_tree/: Makefile
AEDA/p08_avl_tree/: Makefile
CyA/p01_introduction/: description.txt  factorial  factorial.cc
CyA/p02_strings/: alphabet_class.cc  alphabet_class.h  main_strings  main_strings.cc  makefile  output_file.txt  word_class.cc  word_class.h
CyA/p03_string_operations/: main_string_operations  main_strings  makefile  p03_CristopherAfonsoMora.tgz
CyA/p04_code_analyzer/: Makefile  analyzer_cc_class.cc  analyzer_cc_class.h  main_code_analyzer  main_code_analyzer.cc  output_file.txt  test1.cc
CyA/p05_dna_sequencer/: main_dna_sequencer.cc
CyA/p06_dfa_simulator/: alphabet.cc  dfa.cc
CyA/p07_nfa_simulator/: Makefile  alphabet.cc  alphabet.h  chain.cc  chain.h  main_nfa_simulator  main_nfa_simulator.cc  nfa.cc  nfa.h  state_nfa.cc  (+3 more)
CyA/p08_grammar/: CMakeLists.txt  grammar.cc  grammar.h  main_functions.cc  main_functions.h  main_grammar.cc  productions.cc  productions.h  set_symbols.cc  set_symbols.h
(+139 files in other folders)
